# Celebrum-Ai

./: .env.example  .eslintrc.security.js  .gitignore  .roomodes  .snyk  .taskmasterconfig  .windsurfrules  Cargo.toml  DEPLOYMENT.md  Makefile  README.md  SECURITY.md  TEST_MIGRATION_PLAN.md  TEST_STRUCTURE.md  biome.json  build.sh  ci_output.txt  clippy_errors.json  clippy_output.txt  feature_flags.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  rustc-ice-2025-05-23T02_51_50-38704.txt  rustc-ice-2025-05-23T02_57_44-44411.txt  schema.sql  setup-d1.sh  tarpaulin-report.html  test_start_command.ts  test_telegram_webhook.sh  test_webhook.json  test_webhook.sh  trade.py  tsconfig.json  tsconfig.test.json  vitest.config.ts  worker-configuration.d.ts  wrangler.toml
.cargo/: config.toml
.cursor/: environment.json  mcp.json
.cursor/rules/: global-rules.mdc
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
.roo/rules/: dev_workflow.md  global-rules.md
.roo/rules-boomerang/: boomerang-rules
.security-reports/: npm-audit-db-20250621_210550.txt  npm-audit-db-20250621_213235.json  npm-audit-worker-20250621_210550.json  outdated-root-20250621_215728.json  outdated-web-20250621_211542.json  outdated-web-20250621_215643.json  outdated-worker-20250621_213409.json
.taskmaster/: config.json  state.json
.taskmaster/docs/: FINAL_COMPLETION_SUMMARY.md  GUIDELINES.md  OPPORTUNITY_GENERATION_IMPROVEMENTS.md  OpportunityServiceSpec.md  PRD.md  PRODUCTION_CHECKLIST.md  TASK_23_COMPLETION_SUMMARY.md  api-v1-rbac-coverage.md  data-layer-resilience-prd.txt  prd.txt  scratchpad.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  task_018.txt  task_019.txt  task_020.txt  task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  tasks.json  tasks.json.bak
.trae/rules/: project_rules.md
.windsurf/rules/: telegram-arbitrage-bot.md
.windsurf/workflows/: TDD.md  general_paired_implementation_workflow.md
Docs/: GUIDELINES.md  OpportunityServiceSpec.md  PRD.MD  scratchpad.md
Docs/implementation-plan/: improve-test-coverage.md  refactor-to-rust.md
coverage/: clover.xml  coverage-final.json  index.html
coverage/services/: exchangeService.ts.html  index.html  opportunityService.ts.html  telegramService.ts.html
coverage/types/: index.html  index.ts.html
coverage/utils/: formatter.ts.html  index.html
docs/: BUILD_AND_DEV.md  OpportunityServiceSpec.md  PRD.md  SECURITY.md  prod-testing-10k-users-guide.md  scratchpad.md  test-coverage-analysis.md
docs/development/: test-coverage-analysis.md  wasm-testing.md
docs/implementation-done/: address-pr-comments-c6bb7d8.md  fix-ci-failures.md  fix-make-ci-failures.md  session-management-opportunity-distribution.md  super-admin-api-robustness-fix.md
docs/implementation-plan/: fix-ci-failures.md  fix-initial-compilation-errors.md  immediate-test-action-plan.md  improve-feature-and-test-coverage.md  improve-test-coverage.md  post-modularization-ci-fixes.md  pr-31-comment-fixes-f449cf6.md  prd-enhancements.md  refactor-to-rust.md  session-management-opportunity-distribution.md  super-admin-api-robustness-fix.md  telegram-bot-distribution-services-fix.md  telegram-bot-real-functionality.md
docs/old-scratchpad/: 001-scratchpad.md
docs/pr-comment/: pr-24.md  pr-25.md  pr-26.md  pr-27.md  pr-28.md  pr-31.md
migrations/: 0001_delete_positions_manager.toml  015_add_account_balance_to_user_profiles.sql
performance_results_10k_20250528_094555/: test_script.lua  wrk_ramp_health_100users.txt
scripts/: README.md  deploy.sh  dev-setup.sh  example_prd.txt  full-check.sh  pre-commit.sh
scripts/ci/: full-check.sh
scripts/deploy/: deploy.sh
scripts/dev/: fix_arbitrage_errors.sh  local-ci.sh  pre-commit.sh  start-dev.sh  test_telegram_webhook.sh
scripts/prod/: setup-telegram-webhook.sh  test_telegram_webhook.sh
scripts/security/: audit.sh  check.sh  report.sh  scan.sh
scripts/setup/: setup-d1.sh
sql/: 000.schema.sql  001.check_tables.sql  README.md  local_test.db  schema.sql
sql/migrations/: 001_initial_schema.sql  003_add_superadmin.sql  004_test_minimal.sql  005_invitation_tables_only.sql  006_add_user_opportunity_limits.sql  008_add_invitation_indexes.sql  014_add_opportunity_distribution_analytics.sql
src/: index.ts  lib.rs  lib.rs.backup  queue_handlers.rs  types.rs  types.ts
src/handlers/: admin.rs  ai.rs  analytics.rs  health.rs  legacy.rs  mod.rs  trading.rs  user_management.rs
src/middleware/: auth.rs  cors.rs  mod.rs  rbac.rs
test_results/: response_1.json  response_10.json  response_11.json  response_12.json  response_13.json  response_14.json  response_15.json  response_16.json  response_17.json  response_18.json  response_19.json  response_2.json  response_20.json  response_21.json  response_22.json  response_23.json  response_24.json  response_25.json  response_26.json  response_27.json  response_28.json  response_29.json  response_3.json  response_31.json  response_33.json  response_34.json  response_35.json  response_36.json  response_37.json  response_39.json  response_4.json  response_40.json  response_41.json  response_42.json  response_43.json  response_44.json  response_45.json  response_47.json  response_48.json  response_49.json  (+33 more)
tests/: comprehensive_service_integration_test.rs  e2e_user_journeys.rs  env.d.ts  error-handling.test.ts  index.test.ts  index.worker.http.test.ts  index.worker.scheduled.test.ts  index.worker.webhook.test.ts  integration.rs  integration_test_basic.rs  integration_tests.rs  lib.rs  market_data_pipeline_test.rs  mod.rs  service_integration_tests.rs  telegram_advanced_commands_test.rs  telegram_bot_commands_test.rs  vitest.setup.ts
(+395 files in other folders)
