[package]
name = "arb_edge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
disabled_tests = []
cloudflare_analytics = []
cloudflare_queues = []

[dependencies]
worker = { version = "0.5.0", features = ["d1"] }
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.17", features = ["v4", "serde", "js"] }
anyhow = "1.0"
futures = "0.3"
thiserror = "2.0"
regex = "1.11"
async-trait = "0.1"
log = "0.4"
rand = "0.8"
aes-gcm = "0.10"
secrecy = "0.8"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
js-sys = "0.3.70"
web-sys = "0.3.70"
# Fix for getrandom WASM compatibility
getrandom = { version = "0.2", features = ["js"] }
# HTTP client for WASM - reqwest with WASM features
reqwest = { version = "0.12.15", features = ["json"], default-features = false }

# Native (non-WASM) dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# HTTP client for native - reqwest with full features
reqwest = { version = "0.12.15", features = ["json", "stream"], default-features = false }
tokio = { version = "1.42", features = ["macros", "rt"] }
sysinfo = "0.32"

[dev-dependencies]
# WASM-compatible dev dependencies
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt"] }
tokio-test = "0.4"

# Native dev dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

# E2E Tests
[[test]]
name = "webhook_session_management_test"
path = "tests/e2e/webhook_session_management_test.rs"

# Integration Tests
[[test]]
name = "session_opportunity_integration_test"
path = "tests/integration/session_opportunity_integration_test.rs"

[[test]]
name = "service_communication_test"
path = "tests/integration/service_communication_test.rs"



 