[package]
name = "cerebrum-ai"
version = "0.1.0"
edition = "2021"
description = "Cerebrum AI Trading Platform - Unified Cloudflare Worker with Core API, Telegram Bot, and Web Interface"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core worker dependencies  
worker = { version = "0.3", features = ["d1", "queue"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.21"
ring = "0.16"
futures = "0.3"
tokio-util = "0.7"
url = "2.4"
indexmap = "2.0"

# Additional dependencies for unified application
once_cell = "1.18"
rand = "0.8"
md5 = "0.7"
regex = "1.0"
parking_lot = "0.12"
anyhow = "1.0"
secrecy = "0.8"
thiserror = "1.0"
rust_decimal = { version = "1.0", features = ["serde-float"] }
rust_decimal_macros = "1.0"
async-trait = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "Response", 
  "Headers",
  "Url",
  "Performance",
  "Window",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3"
console_error_panic_hook = "0.1"
wee_alloc = "0.4"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"



 