[workspace]
members = [
    "packages/shared",
    "packages/db",
    "packages/worker",
    "packages/web",
    "packages/discord-bot",
    "packages/telegram-bot",
    "packages/shared/tests",
    "packages/worker/tests",
]
resolver = "2"

[workspace.dependencies]

[package]
name = "cerebrum-ai"
version = "0.1.0"
edition = "2021"
description = "Cerebrum AI Trading Platform - Unified Cloudflare Worker with Core API, Telegram Bot, and Web Interface"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core worker dependencies  
worker = { version = "0.6", features = ["d1", "queue"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
sha2 = "0.10"
aes-gcm = "0.10"
base64 = "0.22"
futures = "0.3"
tokio-util = "0.7"
url = "2.4"
indexmap = "2.7"

# Additional dependencies for unified application
once_cell = "1.20"
rand = "0.8"
md5 = "0.7"
regex = "1.11"
parking_lot = "0.12"
anyhow = "1.0"
secrecy = "0.8"
thiserror = "1.0"
rust_decimal = { version = "1.0", features = ["serde-float"] }
rust_decimal_macros = "1.0"
async-trait = "0.1"

# WebPush and VAPID dependencies moved to non-WASM target section

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Request",
  "Response", 
  "Headers",
  "Url",
  "Performance",
  "Window",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
getrandom = "0.2"
# WebPush and VAPID dependencies
web-push = "0.11"
jsonwebtoken = "9.0"
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ece = "2.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"] }
tokio = { version = "1.0", features = ["sync", "macros", "io-util", "rt", "time"] }
uuid = { version = "1.10", features = ["v4", "js"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "unwind"

[features]
default = []
enable-logging = []



 